Modified the comments; add the authorization and authentication; refactor the project by separating the dbModels and blog handlers; change the comment query to strong consistency; change the root of site

--- a/index.yaml
+++ b/index.yaml
@@ -16,6 +16,13 @@ indexes:
   - name: created
     direction: desc
 
+- kind: Comment
+  ancestor: yes
+  properties:
+  - name: blog
+  - name: created
+    direction: desc
+
 - kind: Post
   ancestor: yes
   properties:
